# Game-Engine

./: .gitignore  CMakeLists.txt  README.md  test.lua
engine/: CMakeLists.txt  input.cpp  input.h  main.cpp  main.h
include/: glad.c  luajit.h
include/glad/: glad.h
lib/: lua51.lib  luajit.lib
lua/: test copy.lua  test.lua
